--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@supabase/auth-helpers-react": "^0.4.2",
     "@supabase/auth-ui-react": "^0.4.7",
     "@supabase/auth-ui-shared": "^0.1.8",
+    "@types/uniqid": "^5.3.4",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "stripe": "^14.20.0",
     "tailwind-merge": "^2.2.1",
+    "uniqid": "^5.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
